# foundryIQ-demo

./: .env.example  .gitignore  Agent_Instructions.md  Dockerfile  Getting_Started_Prompts.md  README.md  deploy_foundryiq.ipynb  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
docs/: Demo_Script.md  Generic_Agent_Instructions.md  Generic_Getting_Started.md  Teardown_Instructions.md  setup_wizard.py  teardown.py
files/: .gitkeep
frontend/: index.html  multi-agent.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
src/: __init__.py  api.py  azure_search_client.py  chat_service.py  config.py  document_processor.py  embeddings.py  ingest.py  main.py
src/multi_agent/: README.md  __init__.py  agents.py  api.py  orchestrator.py  runner.py
tests/: __init__.py  test_main.py
